--- a/styles.css
+++ b/styles.css
@@ -2,9 +2,9 @@ div {
     background-color: white;
     margin: auto;
     padding-bottom: 10px;
-    padding-top: 10px;
-    padding-right: 10px;
-    padding-left: 10px;
+    padding-top: 5px;
+    padding-right: 20px;
+    padding-left: 5px;
     border-radius: 5%;
     height: 50%;
     max-width: fit-content;
@@ -17,13 +17,14 @@ div {
     /* display: flex;
     justify-content: center; */
     position: relative;
+    padding-right: 10px;
     /* top: 50px; */
 }
 
 body {
     background-color: hsl(212, 45%, 89%);
     text-align: center;
-    padding: 400px;
+    padding: 550px;
 }
 
 img {
@@ -32,6 +33,8 @@ img {
     padding-right: 10px;
     padding-top: 10px;
     position: relative;
+    /* display: block; */
+    max-width: 100%;
     /* object-fit: cover; */
 }
 
@@ -43,6 +46,8 @@ img {
     width: 350px;
     margin-top: 10px;
     margin-bottom: 10px;
+    margin-left: 35px;
+
 }
 
 .t2 {
@@ -51,6 +56,8 @@ img {
     width: 350px;
     margin: auto;
     font-size: 20px;
-    margin-bottom: 30px;
-    margin-top: 30px;
+    margin-top: 40px;
+    margin-bottom: 15px;
+    margin-left: 40px;
+    margin-right: 10px;
 }
