--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,5 @@
+
+
 div {
     background-color: white;
     margin: auto;
@@ -8,6 +10,7 @@ div {
     border-radius: 5%;
     height: 50%;
     max-width: fit-content;
+    
     /* margin-left: 500px; */
 
 }
@@ -47,6 +50,7 @@ img {
     margin-top: 10px;
     margin-bottom: 10px;
     margin-left: 35px;
+    
 
 }
 
@@ -60,4 +64,7 @@ img {
     margin-bottom: 15px;
     margin-left: 40px;
     margin-right: 10px;
+}
+.attribution{
+    background-color:hsl(212, 45%, 89%) ;
 }
